--- a/csc3021_practicals_public-master/1_Warmup/WarmUp.html
+++ b/csc3021_practicals_public-master/1_Warmup/WarmUp.html
@@ -22,7 +22,7 @@
 					<ul>
 						<li><font face="Arial,Helvetica,Geneva,Swiss,SunSans-Regular">Sun's Thread documentation;</font>
 						<li><font face="Arial,Helvetica,Geneva,Swiss,SunSans-Regular">writing simple multithreaded programs;</font>
-						<li><font face="Arial,Helvetica,Geneva,Swiss,SunSans-Regular">the <a href="../concurrentLib.html#time" target="csc321">Time.delay</a> and <a href="../concurrentLib.html#random" target="csc321">RandomGenerator.integer</a> methods of the <a href="../concurrentLib.html" target="csc321">Concurrent Library</a>. </font>
+						<li><font face="Arial,Helvetica,Geneva,Swiss,SunSans-Regular">the <a href="../concurrentLib.html#time" target="csc321">Time1.delay</a> and <a href="../concurrentLib.html#random" target="csc321">RandomGenerator.integer</a> methods of the <a href="../concurrentLib.html" target="csc321">Concurrent Library</a>. </font>
 						<li><font face="Arial,Helvetica,Geneva,Swiss,SunSans-Regular">some of the problems that can occur in concurrent programming, in particular, interleaving and race conditions.</font>
 					</ul>
 					<p><font face="Arial,Helvetica,Geneva,Swiss,SunSans-Regular">
@@ -51,7 +51,7 @@
 						<li><font face="Arial,Helvetica,Geneva,Swiss,SunSans-Regular">The program <a href="Scheduler/Scheduler.java" target="csc321">Scheduler.java </a>illustrates the random nature of process scheduling.</font>
 						<ul>
 							<li><font face="Arial,Helvetica,Geneva,Swiss,SunSans-Regular">Run it several times and compare the output.</font>
-							<li><font face="Arial,Helvetica,Geneva,Swiss,SunSans-Regular">Insert a time delay into the loop, e.g. Time.delay(50), and run it several times.</font>
+							<li><font face="Arial,Helvetica,Geneva,Swiss,SunSans-Regular">Insert a time delay into the loop, e.g. Time1.delay(50), and run it several times.</font>
 							<li><font face="Arial,Helvetica,Geneva,Swiss,SunSans-Regular">Replace the time delay with Thread.yield() and run it several times.</font>
 						</ul>
 						<li><font face="Arial,Helvetica,Geneva,Swiss,SunSans-Regular">The program <a href="Race/race.java" target="csc321">race.java</a> illustrates a simple example of a race condition.
